feat: adiciona slick

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <!--   Slick -->
+  <link rel="stylesheet" type="text/css" href="/node_modules/slick-carousel/slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="/node_modules/slick-carousel/slick/slick-theme.css" />
   <title>Desafio Maeztra</title>
 </head>
 
